5051/Content/Login.css
@import "compass/css3";

*, *:before, *:after {
    box-sizing: border-box;

}

#background {
    background-image: url("../Content/img/sunset.png");
    background-position: center center;
    background-repeat: repeat;
    background-size: cover;
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0 auto;
    z-index: 1;
}

#background2 {
    background-image: url("../Content/img/daytimeBackground.png");
    background-position: center center;
    background-repeat: repeat;
    background-size: cover;
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0 auto;
    z-index: 1;
}

#background3 {
    background-position: center center;
    background-repeat: repeat;
    background-size: cover;
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0 auto;
    z-index: 1;
    opacity: 0.75;
    background-image: url("../Content/img/nightimeBackground.png");
}

html {
    overflow-y: scroll;
}


a {
    text-decoration: none;
    color: #29abe2;
    transition: 0.5s ease;
}

    a:hover {
        color: #fefbd8;
    }

.form {
    opacity: 0.7;
    filter: alpha(opacity=70);
    background: #3e4444;
    padding: 40px;
    max-width: 600px;
    margin: 50px auto;
    border-radius: 4px;
    box-shadow: 0 4px 10px 4px rgba(62, 68, 68, .3);
}

h1 {
    text-align: center;
    color: #fff;
    position: relative;
    top: 5px;
    font-weight: 300;
    margin: 0 0 40px;
    z-index: 2;
}

h2{
    font-size: 50px;
    text-align: center;
    color: #364c70;
    font-weight: bold;
    padding: 30px;
}

.center{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    height: 50%;

}

label {
    position: absolute;
    transform: translateY(6px);
    left: 13px;
    color: rgba(255, 255, 255, .5);
    transition: all 0.25s ease;
    -webkit-backface-visibility: hidden;
    pointer-events: none;
    font-size: 22px;
}

    label .req {
        margin: 2px;
        color: #1ab188;
    }

    label.active {
        transform: translateY(50px);
        left: 2px;
        font-size: 14px;
    }

        label.active .req {
            opacity: 0;
        }

    label.highlight {
        color: #fff;
    }

input, textarea {
    font-size: 22px;
    display: block;
    width: 100%;
    height: 100%;
    padding: 5px 10px;
    background: none;
    background-image: none;
    border: 1px solid #a0b3b0;
    color: #fff;
    border-radius: 0;
    transition: border-color 0.25s ease, box-shadow 0.25s ease;
}

    input:focus, textarea:focus {
        outline: 0;
        border-color: #1ab188;
    }

textarea {
    border: 2px solid #a0b3b0;
    resize: vertical;
}

.field-wrap {
    position: relative;
    margin-bottom: 40px;
}

.top-row:after {
    content: "";
    display: table;
    clear: both;
}

.top-row > div {
    float: left;
    width: 48%;
    margin-right: 4%;
}

    .top-row > div:last-child {
        margin: 0;
    }

.button {
    border: 0;
    outline: none;
    border-radius: 0;
    padding: 15px 0;
    font-size: 2rem;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    background: #fcfcfc;
    color: #3e4444;
    transition: all 0.5s ease;
    -webkit-appearance: none;
    display: block;
}

    .button:hover, .button:focus {
        background: #64dfed;
    }

.button-block {
    text-align: center;
    width: 100%;
}

.forgot {
    margin-top: -20px;
    text-align: right;
}

